--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="../admin/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nike admin panel</title>
+    <title>Nike admin panel</title>
   </head>
   <body>
     <div id="root"></div>
